--- a/templates/home.html
+++ b/templates/home.html
@@ -6,19 +6,12 @@
         <h1>App to help learn Dutch words</h1>
 
         <div><h3>{{dutch_word}}</h3></div>
+        {% for button in buttons %}
+        <div>
+            <button name="submit">{{button}}</button>
+        </div>
 
-        <div>
-            <button name="submit">{{button1}}</button>
-            <button name="submit">{{button2}}</button>
-        </div>
-        <div>
-            <button name="submit">{{button3}}</button>
-            <button name="submit">{{button4}}</button>
-        </div>
-        <div>
-            <button name="submit">{{button5}}</button>
-            <button name="submit">{{button6}}</button>
-        </div>
+        {% endfor %}
     
     </div>
 
