--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,15 @@
 
 <body bgcolor="black" style="color:#00ff00">
 
+    <div>
+        <p>
+            <a href="{% url 'main:index' %}">HOME</a>
+        </p>
+
+        <h1>App to help learn Dutch words</h1>
+
+    </div>
+
     {% block content %}
 
     {% endblock %}
