--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -1,9 +1,9 @@
-{% extends "base.html" %}
+{% extends "dutch_app/base.html" %}
 
-{% block content%}
+{% block content %}
 
     <div>
-        <div><h2>{{dutch_word}}</h2></div>
+        <div><h2>{{ dutchWord }}</h2></div>
         {% for button in buttons %}
         <div>
             <a href="{% url 'main:answer' %}">
