folder structure change

--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -7,17 +7,7 @@
     <title>Dutch App</title>
 </head>
 
-<body bgcolor="black" style="color:#00ff00">
-
-    <div>
-        <p>
-            <a href="{% url 'main:index' %}">HOME</a>
-        </p>
-
-        <h1>App to help learn Dutch words</h1>
-
-    </div>
-
+<body>
     {% block content %}
 
     {% endblock %}
