--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -2,4 +2,6 @@
 
 {% block content %}
 <h1>Main page</h1>
+<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem reprehenderit ut dicta facilis voluptatibus optio quis numquam corporis officia fuga assumenda facere possimus velit commodi, ipsa, harum, temporibus blanditiis? Explicabo?</p>
+
 {% endblock content %}
