--- a/templates/main/header.html
+++ b/templates/main/header.html
@@ -19,6 +19,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/quiz">Quiz</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Test</a>
+                </li>
             </ul>
         </div>
     </div>
