--- a/templates/quiz/index.html
+++ b/templates/quiz/index.html
@@ -2,6 +2,101 @@
 
 {% block content %}
 
-<h1>Quiz</h1>
-
+<div class="container h-100">
+    <div class="row align-items-start">
+        <div class="col">
+            <div class="vh-25 card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Quiz</h5>
+                    <p class="card-text">Chceck if you know the meaning of words</p>
+                    <a href="milionere" class="btn btn-secondary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">HET/DE</h5>
+                    <p class="card-text">'Het' or 'de' - you tell me!</p>
+                    <a href="#" class="btn btn-secondary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">HET/DE</h5>
+                    <p class="card-text">'Het' or 'de' - you tell me!</p>
+                    <a href="#" class="btn btn-secondary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row align-items-center">
+        <div class="col">
+            <div class="card mh-100" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Quiz</h5>
+                    <p class="card-text">Chceck if you know the meaning of words</p>
+                    <a href="#" class="btn btn-secondary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-25" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">HET/DE</h5>
+                    <p class="card-text">'Het' or 'de' - you tell me!</p>
+                    <a href="#" class="btn btn-secondary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-25" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">HET/DE</h5>
+                    <p class="card-text">'Het' or 'de' - you tell me!</p>
+                    <a href="#" class="btn btn-secondary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row align-items-end">
+        <div class="col">
+            <div class="card mh-100" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Quiz</h5>
+                    <p class="card-text">Chceck if you know the meaning of words</p>
+                    <a href="#" class="btn btn-secondary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-25" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">HET/DE</h5>
+                    <p class="card-text">'Het' or 'de' - you tell me!</p>
+                    <a href="#" class="btn btn-secondary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-25" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">HET/DE</h5>
+                    <p class="card-text">'Het' or 'de' - you tell me!</p>
+                    <a href="#" class="btn btn-secondary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+</div>
 {% endblock %}
